overflow, x.com link and footer layout fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,3 +59,6 @@
   max-height: calc(100vh - 10px);
   overflow: auto;
 }
+body {
+  overflow-x: hidden;
+}
